Fixed footer layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --font-inter: "Inter", sans-serif;
   --font-poppins: "Poppins", sans-serif;
   --font-playfair: "Playfair Display", serif;
+  --font-montserrat: "Montserrat", sans-serif;
 }
 
 .menu-font {
